[project]
name = "RBDO_Agent"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansys-fluent-core",
    "ansys-geometry-core",
    "colorama",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "geatpy",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.3",
    "matplotlib",
    "openai",
    "pandas",
    "pydoe",
    "python-dotenv",
    "scikit-learn",
]
[tool.uv.sources]
geatpy = { url = "https://github.com/geatpy-dev/geatpy/releases/download/v2.7.0/geatpy-2.7.0-cp312-cp312-win_amd64.whl" }
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

